<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>
    <string name="MejoresResultados">Mejores resultados</string>
    <string name="saveGame">Guardar partida</string>
    <string name="cargarGame">Cargar partida</string>
    <string name="partidaGuardada">Partida guardada</string>
    <string name="partidaCargada">Partida cargada</string>
    <string name="reiniciar">Reiniciar partida</string>
    <string name="borrarMejoresJugadores">Borrar todos</string>
    <string name="filtrarJugadores">Filtrar jugadores</string>
    <string name="cabeceraId">Id</string>
    <string name="cabeceraNombre">Nombre jugador</string>
    <string name="cabeceraPuntuacion">Puntuacion</string>


    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Diálogo Load -->
    <string name="txtDialogoLoadTitulo">Cargar un nuevo juego</string>
    <string name="txtDialogoLoadPregunta">¿Estás seguro que quieres cargar una nueva partida?</string>
    <string name="txtDialogoLoadAfirmativo">Sí</string>
    <string name="txtDialogoLoadNegativo">No</string>

    <!-- Reiniciar Load -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar partida</string>
    <string name="txtDialogoReiniciarPregunta">¿Estás seguro que quieres reiniciar la partida?</string>
    <string name="txtDialogoReiniciarAfirmativo">Sí</string>
    <string name="txtDialogoReiniciarNegativo">No</string>

    <!-- Delete Mejores resultados -->
    <string name="txtDialogoDeleteTitulo">Eliminar mejores resultados</string>
    <string name="txtDialogoDeletePregunta">¿Estás seguro que quieres eliminar el registro de los mejores resultados?</string>
    <string name="txtDialogoDeleteAfirmativo">Sí</string>
    <string name="txtDialogoDeleteNegativo">No</string>

    <!-- Filtros Mejores resultados -->
    <string name="txtFiltroNombre">Filtro por nombre</string>
    <string name="txtFiltroPuntuacion">Filtro por puntuación</string>


</resources>